--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <main>
       <article>
         <h2>Mes travaux en Technologies Web</h2>
-        <p>Le but de cette séance de Travaux Pratiques est de composer un site web qui vous permettra de naviguer à travers vos réalisations.</p>
+        <p>Voici mes réalisations.</p>
       </article>
 
       <aside>
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-      <p>©Copyright ENSSAT</p>
+      <p>©Copyright Ronan RENOUX</p>
     </footer>
 
   </body>
