--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
       <article>
         <h2>Mes travaux en Technologies Web</h2>
         <p>Voici mes réalisations.</p>
+	<ul>
+	    <li>HTML</li>
+	    <ul>
+	    	<li><a href="#">TP1</a></li>
+	    	<li><a href="#">TP2</a></li>
+	    </ul>
+	    <li>JS</li>
+	    <ul>
+	    	<li><a href="#">TP1</a></li>
+	    	<li><a href="#">TP2</a></li>
+	    </ul>	
+	</ul>
       </article>
 
       <aside>
