--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 	<ul>
 	    <li>HTML</li>
 	    <ul>
-	    	<li><a href="./TP/HTML/TP1/index.html">TP1</a></li>
+	    	<li><a href="./TP/JS/TP1/index.html">TP1</a></li>
 	    </ul>
 	    <li>JS</li>
 	    <ul>
 	    	<li><a href="./TP/JS/TP1/index.html">TP1</a></li>
+		<ul>
+			<li><a href="./TP/JS/TP1/EX1/index.html">EX1</a></li>
+		</ul>
 	    	<li><a href="./TP/JS/TP2/index.html">TP2</a></li>
 	    </ul>	
 	</ul>
