--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </main>
 
     <footer>
-      <p>©Copyright Ronan RENOUX</p>
+      <p>©Copyright Ronan RENOUX 2021</p>
     </footer>
 
   </body>
