--- a/index.html
+++ b/index.html
@@ -1,68 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
 
-    <title>Accueil</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<head>
+  <meta charset="utf-8">
 
-  </head>
+  <title>Accueil</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-  <body>
-    <header>
-      <h1>Bienvenue !</h1>
-    </header>
+</head>
 
-    <nav>
+<body>
+  <header>
+    <h1>Bienvenue !</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="./page1.html">Lien 1</a></li>
+      <li><a href="./page2.html">Lien 2</a></li>
+      <li><a href="./index.html">Acccueil</a></li>
+      <li><a href="https://ronanren.github.io/">Qui suis-je</a></li>
+    </ul>
+
+  </nav>
+
+  <main>
+    <article>
+      <h2>Mes travaux en Technologies Web</h2>
+      <p>Voici mes réalisations.</p>
       <ul>
-        <li><a href="./page1.html">Lien 1</a></li>
-        <li><a href="./page2.html">Lien 2</a></li>
-        <li><a href="./index.html">Acccueil</a></li>
-	<li><a href="https://ronanren.github.io/">Qui suis-je</a></li>
-      </ul>
-
-     </nav>
-
-     <main>
-      <article>
-        <h2>Mes travaux en Technologies Web</h2>
-        <p>Voici mes réalisations.</p>
-	<ul>
-	    <li>HTML</li>
-	    <ul>
-	    	<li><a href="./TP/HTML/TP1/index.html">TP1</a></li>
-	    </ul>
-	    <li>JS</li>
-	    <ul>
-	    	<li>TP1</li>
-		<ul>
-			<li><a href="./TP/JS/TP1/exo1/q1.html">EX1</a></li>
-			<li><a href="./TP/JS/TP1/exo2/exo2.html">EX2</a></li>
-			<li><a href="./TP/JS/TP1/exo3/exo3.html">EX3</a></li>
-			<li><a href="./TP/JS/TP1/exo4/exo4.html">EX4</a></li>
-			<li><a href="./TP/JS/TP1/exo5/exo5.html">EX5</a></li>
-			<li><a href="./TP/JS/TP1/exo6/exo6.html">EX6</a></li>
-		</ul>
-	    	<li><a href="./TP/JS/TP2/index.html">TP2</a></li>
-	    </ul>	
-	</ul>
-      </article>
-
-      <aside>
-        <h2>En relation</h2>
+        <li>HTML</li>
         <ul>
-          <li><a href="#"></a>relation1</li>
-          <li><a href="#"></a>relation2</li>
-          <li><a href="#"></a>relation3</li>
-          <li><a href="#"></a>relation4</li>
+          <li><a href="./TP/HTML/TP1/index.html">TP1</a></li>
         </ul>
-      </aside>
+        <li>JS</li>
+        <ul>
+          <li>TP1</li>
+          <ul>
+            <li><a href="./TP/JS/TP1/exo1/q1.html">EX1</a></li>
+            <li><a href="./TP/JS/TP1/exo2/exo2.html">EX2</a></li>
+            <li><a href="./TP/JS/TP1/exo3/exo3.html">EX3</a></li>
+            <li><a href="./TP/JS/TP1/exo4/exo4.html">EX4</a></li>
+            <li><a href="./TP/JS/TP1/exo5/exo5.html">EX5</a></li>
+            <li><a href="./TP/JS/TP1/exo6/exo6.html">EX6</a></li>
+          </ul>
+          <li>TP2</li>
+          <ul>
+            <li><a href="./TP/JS/TP2/tp1.html">EX1</a></li>
+            <li><a href="./TP/JS/TP2/tp2.html">EX2</a></li>
+            <li><a href="./TP/JS/TP2/tp3.html">EX3</a></li>
+          </ul>
+        </ul>
+      </ul>
+    </article>
 
-    </main>
+    <aside>
+      <h2>En relation</h2>
+      <ul>
+        <li><a href="#"></a>relation1</li>
+        <li><a href="#"></a>relation2</li>
+        <li><a href="#"></a>relation3</li>
+        <li><a href="#"></a>relation4</li>
+      </ul>
+    </aside>
 
-    <footer>
-      <p>©Copyright Ronan RENOUX 2021</p>
-    </footer>
+  </main>
 
-  </body>
+  <footer>
+    <p>©Copyright Ronan RENOUX 2021</p>
+  </footer>
+
+</body>
+
 </html>
