--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="./TP/JS/TP2/tp1.html">EX1</a></li>
             <li><a href="./TP/JS/TP2/tp2.html">EX2</a></li>
             <li><a href="./TP/JS/TP2/tp3.html">EX3</a></li>
+            <li><a href="./TP/JS/TP2/tp4.html">EX4</a></li>
           </ul>
         </ul>
       </ul>
