--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><a href="./TP/JS/TP2/tp2.html">EX2</a></li>
             <li><a href="./TP/JS/TP2/tp3.html">EX3</a></li>
             <li><a href="./TP/JS/TP2/tp4.html">EX4</a></li>
+            <li><a href="./TP/JS/TP2/tp5.html">EX5</a></li>
           </ul>
         </ul>
       </ul>
